src/markdown/tests/snapshots/mehen__markdown__tests__assert_fixture_snapshot@artifact_debt_high.md.snap
---
source: src/markdown/tests/mod.rs
assertion_line: 29
---
path: "<fixture_path>"
loc:
  dloc: 23
  ploc: 4
  cloc: 9
  tloc: 3
  mloc: 0
  bloc: 5
  aloc: 14
loc_ratios:
  artifact_line_ratio: 0.6086956521739131
  code_line_ratio: 0.391304347826087
  table_line_ratio: 0.13043478260869565
  math_line_ratio: 0
  blank_line_ratio: 0.21739130434782608
size:
  words: 33
  effective_content_units: 3.9274999999999998
  sections: 1
  headings: 1
ecu_inputs:
  table_cells: 4
  diagram_nodes: 0
  diagram_edges: 0
  math_tokens: 0
  raw_html_or_mdx_lines: 2
sections:
  - section_id: 0
    heading_level: 1
    heading_text: ~
    start_line: 1
    end_line: 23
    parent_section_id: ~
    child_section_ids: []
    word_count: 33
    block_count: 6
links:
  total: 0
  internal: 0
  relative: 0
  external: 0
  external_vendor: 0
  scholarly: 0
  issue_pr: 0
  absolute_same_repo: 0
  image: 0
  footnote: 0
  bare_url: 0
  broken: 0
  link_debt_score: 0
  information_scent_score: 0
  review_burden: 0
visuals:
  images: 0
  diagrams: 0
  diagram_nodes_total: 0
  diagram_edges_total: 0
  diagram_cycles_total: 0
  visual_scaffold_score: 0
  visual_net_effect: 0
tables:
  count: 1
  max_cells: 4
  table_burden_score: 0.025
  table_scaffold_score: 0
  hard_warnings: 0
maintainability:
  documentation_maintainability_index: 0
  section_balance_score: 0
  artifact_debt_score: 0.4277173913043478
artifacts:
  - id: 0
    kind: code
    start_line: 7
    end_line: 9
    language_tag: ~
    size: 1
    has_explanation: true
    has_label: false
    oversized: false
    burden: 2.5
  - id: 1
    kind: html
    start_line: 11
    end_line: 12
    language_tag: ~
    size: 2
    has_explanation: true
    has_label: false
    oversized: false
    burden: 2
  - id: 2
    kind: code
    start_line: 13
    end_line: 15
    language_tag: ~
    size: 1
    has_explanation: false
    has_label: false
    oversized: false
    burden: 2.5
  - id: 3
    kind: code
    start_line: 17
    end_line: 19
    language_tag: tikz
    size: 1
    has_explanation: false
    has_label: true
    oversized: false
    burden: 1
  - id: 4
    kind: table
    start_line: 21
    end_line: 23
    language_tag: ~
    size: 4
    has_explanation: false
    has_label: true
    oversized: false
    burden: 0.025
