src/markdown/tests/snapshots/mehen__markdown__tests__assert_fixture_snapshot@broken_links.md.snap
---
source: src/markdown/tests/mod.rs
---
path: "<fixture_path>"
loc:
  dloc: 13
  ploc: 10
  cloc: 0
  tloc: 0
  mloc: 0
  bloc: 3
  aloc: 0
loc_ratios:
  artifact_line_ratio: 0
  code_line_ratio: 0
  table_line_ratio: 0
  math_line_ratio: 0
  blank_line_ratio: 0.23076923076923078
size:
  words: 27
  effective_content_units: 0.1125
  sections: 2
  headings: 2
ecu_inputs:
  table_cells: 0
  diagram_nodes: 0
  diagram_edges: 0
  math_tokens: 0
  raw_html_or_mdx_lines: 0
sections:
  - section_id: 0
    heading_level: 1
    heading_text: ~
    start_line: 1
    end_line: 13
    parent_section_id: ~
    child_section_ids:
      - 1
    word_count: 18
    block_count: 6
  - section_id: 1
    heading_level: 2
    heading_text: ~
    start_line: 11
    end_line: 13
    parent_section_id: 0
    child_section_ids: []
    word_count: 9
    block_count: 1
complexity:
  reading_path_complexity: 1
  reading_path_complexity_raw: 2
  cognitive_complexity: 4.789
  halstead:
    operators_distinct: 8
    operators_total: 19
    operands_distinct: 35
    operands_total: 37
    vocabulary: 43
    length: 56
    volume: 303.8708262633175
    difficulty: 4.228571428571429
    effort: 1284.9394939134568
    embedded_volume: 0
    total_volume: 303.8708262633175
links:
  total: 5
  internal: 1
  relative: 3
  external: 1
  external_vendor: 0
  scholarly: 0
  issue_pr: 0
  absolute_same_repo: 0
  image: 0
  footnote: 0
  bare_url: 0
  broken: 2
  link_debt_score: 0.65
  information_scent_score: 0.12
  review_burden: 8.7
visuals:
  images: 0
  diagrams: 0
  diagram_nodes_total: 0
  diagram_edges_total: 0
  diagram_cycles_total: 0
  visual_scaffold_score: 0
  visual_net_effect: 0
tables:
  count: 0
  max_cells: 0
  table_burden_score: 0
  table_scaffold_score: 0
  hard_warnings: 0
maintainability:
  documentation_maintainability_index: 100
  section_balance_score: 0
  good_scaffold_score: 0
  artifact_debt_score: 0
artifacts: []
prose:
  language_detection:
    dominant_language: en
    blocks:
      - start_line: 1
        end_line: 1
        language: en
      - start_line: 3
        end_line: 4
        language: en
      - start_line: 6
        end_line: 6
        language: en
      - start_line: 7
        end_line: 7
        language: en
      - start_line: 8
        end_line: 8
        language: en
      - start_line: 9
        end_line: 9
        language: en
      - start_line: 11
        end_line: 11
        language: en
      - start_line: 13
        end_line: 13
        language: en
  english:
    readability:
      flesch_reading_ease: ~
      flesch_kincaid_grade: ~
      gunning_fog: ~
      smog: ~
      ari: ~
      coleman_liau: ~
      dale_chall_new: ~
      dale_chall_list: ngsl-1.2
      forcast: ~
      lix: ~
      rix: ~
      ensemble_grade_band:
        - ~
        - ~
    lexical:
      mattr_50: 0.829
      hapax_ratio: 0.824
      dis_ratio: 0.147
      lexical_density: 0.756
      avg_sentence_words: 5.125
      p90_sentence_words: 15
      max_sentence_words: 15
      stddev_sentence_words: 4.343
      avg_word_chars: 5.317
      p90_word_chars: 7
      sentence_count: 8
      words_total: 41
    wording:
      passive_ratio: 0
      hedge_density: 0.024
      weasel_density: 0
      wordy_density: 0
      adverb_density: 0.024
      nominalization_density: 0.049
      expletive_count: 0
      lexical_illusions: 0
      cliche_density: 0
      nonword_count: 0
      long_sentence_count: 0
      wording_quality_score: 0.978
    inclusive_language:
      flags: []
      inclusive_language_score: 1
      flag_count: 0
    short_doc_warning: true
  japanese: ~
  meta:
    short_doc_warning: true
    words_counted: 41
    sentences_counted: 8
    blocks_stripped:
      - code
