src/markdown/tests/snapshots/mehen__markdown__tests__assert_fixture_snapshot@code_fences.md.snap
---
source: src/markdown/tests/mod.rs
---
path: "<fixture_path>"
loc:
  dloc: 20
  ploc: 4
  cloc: 11
  tloc: 0
  mloc: 0
  bloc: 5
  aloc: 11
loc_ratios:
  artifact_line_ratio: 0.55
  code_line_ratio: 0.55
  table_line_ratio: 0
  math_line_ratio: 0
  blank_line_ratio: 0.25
size:
  words: 15
  effective_content_units: 3.9124999999999996
  sections: 1
  headings: 1
ecu_inputs:
  table_cells: 0
  diagram_nodes: 0
  diagram_edges: 0
  math_tokens: 0
  raw_html_or_mdx_lines: 0
sections:
  - section_id: 0
    heading_level: 1
    heading_text: ~
    start_line: 1
    end_line: 20
    parent_section_id: ~
    child_section_ids: []
    word_count: 15
    block_count: 5
complexity:
  reading_path_complexity: 1
  reading_path_complexity_raw: 1
  cognitive_complexity: 2.0250000000000004
  halstead:
    operators_distinct: 4
    operators_total: 6
    operands_distinct: 18
    operands_total: 20
    vocabulary: 22
    length: 26
    volume: 115.94522208456974
    difficulty: 2.2222222222222223
    effort: 257.65604907682166
    embedded_volume: 1.3392304845413265
    total_volume: 117.28445256911107
maintainability:
  documentation_maintainability_index: 100
