src/markdown/tests/snapshots/mehen__markdown__tests__assert_fixture_snapshot@deep_nesting.md.snap
---
source: src/markdown/tests/mod.rs
---
path: "<fixture_path>"
loc:
  dloc: 26
  ploc: 21
  cloc: 0
  tloc: 0
  mloc: 0
  bloc: 5
  aloc: 0
loc_ratios:
  artifact_line_ratio: 0
  code_line_ratio: 0
  table_line_ratio: 0
  math_line_ratio: 0
  blank_line_ratio: 0.19230769230769232
size:
  words: 46
  effective_content_units: 0.19166666666666668
  sections: 2
  headings: 2
ecu_inputs:
  table_cells: 0
  diagram_nodes: 0
  diagram_edges: 0
  math_tokens: 0
  raw_html_or_mdx_lines: 0
sections:
  - section_id: 0
    heading_level: 1
    heading_text: ~
    start_line: 1
    end_line: 26
    parent_section_id: ~
    child_section_ids:
      - 1
    word_count: 34
    block_count: 15
  - section_id: 1
    heading_level: 2
    heading_text: ~
    start_line: 17
    end_line: 26
    parent_section_id: 0
    child_section_ids: []
    word_count: 12
    block_count: 9
complexity:
  reading_path_complexity: 1
  reading_path_complexity_raw: 1
  cognitive_complexity: 17.177
  halstead:
    operators_distinct: 8
    operators_total: 24
    operands_distinct: 37
    operands_total: 51
    vocabulary: 45
    length: 75
    volume: 411.8889822247256
    difficulty: 5.513513513513513
    effort: 2270.955469563352
    embedded_volume: 0
    total_volume: 411.8889822247256
links:
  total: 0
  internal: 0
  relative: 0
  external: 0
  external_vendor: 0
  scholarly: 0
  issue_pr: 0
  absolute_same_repo: 0
  image: 0
  footnote: 0
  bare_url: 0
  broken: 0
  link_debt_score: 0
  information_scent_score: 0
  review_burden: 0
visuals:
  images: 0
  diagrams: 0
  diagram_nodes_total: 0
  diagram_edges_total: 0
  diagram_cycles_total: 0
  visual_scaffold_score: 0
  visual_net_effect: 0
tables:
  count: 0
  max_cells: 0
  table_burden_score: 0
  table_scaffold_score: 0
  hard_warnings: 0
maintainability:
  documentation_maintainability_index: 99.39713846153846
  section_balance_score: 0
  good_scaffold_score: 0
  artifact_debt_score: 0
artifacts: []
prose:
  language_detection:
    dominant_language: en
    blocks:
      - start_line: 1
        end_line: 1
        language: en
      - start_line: 3
        end_line: 4
        language: en
      - start_line: 6
        end_line: 7
        language: en
      - start_line: 8
        end_line: 9
        language: en
      - start_line: 9
        end_line: 10
        language: en
      - start_line: 10
        end_line: 11
        language: en
      - start_line: 12
        end_line: 13
        language: en
      - start_line: 14
        end_line: 15
        language: en
      - start_line: 15
        end_line: 15
        language: en
      - start_line: 17
        end_line: 17
        language: en
      - start_line: 20
        end_line: 21
        language: en
      - start_line: 22
        end_line: 23
        language: en
      - start_line: 23
        end_line: 24
        language: en
      - start_line: 24
        end_line: 24
        language: en
      - start_line: 26
        end_line: 26
        language: en
  english:
    readability:
      flesch_reading_ease: ~
      flesch_kincaid_grade: ~
      gunning_fog: ~
      smog: ~
      ari: ~
      coleman_liau: ~
      dale_chall_new: ~
      dale_chall_list: ngsl-1.2
      forcast: ~
      lix: ~
      rix: ~
      ensemble_grade_band:
        - ~
        - ~
    lexical:
      mattr_50: 0.65
      hapax_ratio: 0.667
      dis_ratio: 0.242
      lexical_density: 0.863
      avg_sentence_words: 3.4
      p90_sentence_words: 6
      max_sentence_words: 11
      stddev_sentence_words: 2.304
      avg_word_chars: 5.451
      p90_word_chars: 9
      sentence_count: 15
      words_total: 51
    wording:
      passive_ratio: 0
      hedge_density: 0
      weasel_density: 0
      wordy_density: 0
      adverb_density: 0
      nominalization_density: 0
      expletive_count: 0
      lexical_illusions: 0
      cliche_density: 0
      nonword_count: 0
      long_sentence_count: 0
      wording_quality_score: 1
    inclusive_language:
      flags: []
      inclusive_language_score: 1
      flag_count: 0
    short_doc_warning: true
  japanese: ~
  meta:
    short_doc_warning: true
    words_counted: 51
    sentences_counted: 15
    blocks_stripped: []
