src/markdown/tests/snapshots/mehen__markdown__tests__assert_fixture_snapshot@diagram_mermaid.md.snap
---
source: src/markdown/tests/mod.rs
---
path: "<fixture_path>"
loc:
  dloc: 13
  ploc: 5
  cloc: 5
  tloc: 0
  mloc: 0
  bloc: 3
  aloc: 5
loc_ratios:
  artifact_line_ratio: 0.38461538461538464
  code_line_ratio: 0.38461538461538464
  table_line_ratio: 0
  math_line_ratio: 0
  blank_line_ratio: 0.23076923076923078
size:
  words: 46
  effective_content_units: 3.2416666666666667
  sections: 1
  headings: 1
ecu_inputs:
  table_cells: 0
  diagram_nodes: 2
  diagram_edges: 2
  math_tokens: 0
  raw_html_or_mdx_lines: 0
sections:
  - section_id: 0
    heading_level: 1
    heading_text: ~
    start_line: 1
    end_line: 13
    parent_section_id: ~
    child_section_ids: []
    word_count: 46
    block_count: 3
complexity:
  reading_path_complexity: 2
  reading_path_complexity_raw: 2
  cognitive_complexity: 1.4329326923076922
  halstead:
    operators_distinct: 5
    operators_total: 16
    operands_distinct: 44
    operands_total: 50
    vocabulary: 49
    length: 66
    volume: 370.5708497116037
    difficulty: 2.8409090909090913
    effort: 1052.7580957716016
    embedded_volume: 0
    total_volume: 370.5708497116037
links:
  total: 0
  internal: 0
  relative: 0
  external: 0
  external_vendor: 0
  scholarly: 0
  issue_pr: 0
  absolute_same_repo: 0
  image: 0
  footnote: 0
  bare_url: 0
  broken: 0
  link_debt_score: 0
  information_scent_score: 0
  review_burden: 0
visuals:
  images: 0
  diagrams: 1
  diagram_nodes_total: 2
  diagram_edges_total: 2
  diagram_cycles_total: 1
  visual_scaffold_score: 0.9569487529386909
  visual_net_effect: 1.4000000000000004
tables:
  count: 0
  max_cells: 0
  table_burden_score: 0
  table_scaffold_score: 0
  hard_warnings: 0
maintainability:
  documentation_maintainability_index: 100
  section_balance_score: 0
  good_scaffold_score: 0
  artifact_debt_score: 0
artifacts:
  - id: 0
    kind: diagram
    start_line: 6
    end_line: 10
    language_tag: mermaid
    size: 2
    has_explanation: true
    has_label: true
    oversized: false
    burden: 3.4000000000000004
