src/markdown/tests/snapshots/mehen__markdown__tests__assert_fixture_snapshot@diagram_parse_error.md.snap
---
source: src/markdown/tests/mod.rs
---
path: "<fixture_path>"
loc:
  dloc: 19
  ploc: 4
  cloc: 12
  tloc: 0
  mloc: 0
  bloc: 3
  aloc: 12
loc_ratios:
  artifact_line_ratio: 0.631578947368421
  code_line_ratio: 0.631578947368421
  table_line_ratio: 0
  math_line_ratio: 0
  blank_line_ratio: 0.15789473684210525
size:
  words: 25
  effective_content_units: 5.854166666666666
  sections: 1
  headings: 1
ecu_inputs:
  table_cells: 0
  diagram_nodes: 2
  diagram_edges: 3
  math_tokens: 0
  raw_html_or_mdx_lines: 0
sections:
  - section_id: 0
    heading_level: 1
    heading_text: ~
    start_line: 1
    end_line: 19
    parent_section_id: ~
    child_section_ids: []
    word_count: 25
    block_count: 3
complexity:
  reading_path_complexity: 2
  reading_path_complexity_raw: 2
  cognitive_complexity: 2.5312500000000004
  halstead:
    operators_distinct: 8
    operators_total: 13
    operands_distinct: 29
    operands_total: 32
    vocabulary: 37
    length: 45
    volume: 234.42540145330275
    difficulty: 4.413793103448276
    effort: 1034.7052202076811
    embedded_volume: 0
    total_volume: 234.42540145330275
links:
  total: 0
  internal: 0
  relative: 0
  external: 0
  external_vendor: 0
  scholarly: 0
  issue_pr: 0
  absolute_same_repo: 0
  image: 0
  footnote: 0
  bare_url: 0
  broken: 0
  link_debt_score: 0
  information_scent_score: 0
  review_burden: 0
visuals:
  images: 0
  diagrams: 1
  diagram_nodes_total: 2
  diagram_edges_total: 3
  diagram_cycles_total: 0
  visual_scaffold_score: 0.9759000729485331
  visual_net_effect: 0.4500000000000002
tables:
  count: 0
  max_cells: 0
  table_burden_score: 0
  table_scaffold_score: 0
  hard_warnings: 0
maintainability:
  documentation_maintainability_index: 100
  section_balance_score: 0.85
  good_scaffold_score: 0.44397501823713326
  artifact_debt_score: 0
grounding:
  repository_grounding_score: 0.19
  evidence_coverage_score: 1
ai_era:
  filler_lazy_structure_risk: 0.2295
  labels:
    - low-repository-grounding
  top_contributors:
    - - low-repository-grounding
      - 0.81
    - - specificity-scarcity
      - 0.25
    - - lazy-sectioning
      - 0.24999999999999994
review:
  review_criticality_index: 12.22
artifacts:
  - id: 0
    kind: diagram
    start_line: 7
    end_line: 13
    language_tag: plantuml
    size: 2
    has_explanation: true
    has_label: true
    oversized: false
    burden: 2.45
  - id: 1
    kind: code
    start_line: 15
    end_line: 19
    language_tag: tikz
    size: 3
    has_explanation: true
    has_label: true
    oversized: false
    burden: 1
prose:
  language_detection:
    dominant_language: en
    blocks:
      - start_line: 1
        end_line: 1
        language: en
      - start_line: 3
        end_line: 5
        language: en
  english:
    readability:
      flesch_reading_ease: ~
      flesch_kincaid_grade: ~
      gunning_fog: ~
      smog: ~
      ari: ~
      coleman_liau: ~
      dale_chall_new: ~
      dale_chall_list: ngsl-1.2
      forcast: ~
      lix: ~
      rix: ~
      ensemble_grade_band:
        - ~
        - ~
    lexical:
      mattr_50: 0.862
      hapax_ratio: 0.92
      dis_ratio: 0.04
      lexical_density: 0.759
      avg_sentence_words: 14.5
      p90_sentence_words: 25
      max_sentence_words: 25
      stddev_sentence_words: 10.5
      avg_word_chars: 5.31
      p90_word_chars: 8
      sentence_count: 2
      words_total: 29
    wording:
      passive_ratio: 0
      hedge_density: 0
      weasel_density: 0
      wordy_density: 0
      adverb_density: 0
      nominalization_density: 0.034
      expletive_count: 0
      lexical_illusions: 0
      cliche_density: 0
      nonword_count: 0
      long_sentence_count: 0
      wording_quality_score: 1
    inclusive_language:
      flags: []
      inclusive_language_score: 1
      flag_count: 0
    short_doc_warning: true
  japanese: ~
  meta:
    short_doc_warning: true
    words_counted: 29
    sentences_counted: 2
    blocks_stripped:
      - code
