src/markdown/tests/snapshots/mehen__markdown__tests__assert_fixture_snapshot@halstead_mixed.md.snap
---
source: src/markdown/tests/mod.rs
---
path: "<fixture_path>"
loc:
  dloc: 38
  ploc: 16
  cloc: 4
  tloc: 4
  mloc: 0
  bloc: 13
  aloc: 9
loc_ratios:
  artifact_line_ratio: 0.23684210526315788
  code_line_ratio: 0.10526315789473684
  table_line_ratio: 0.10526315789473684
  math_line_ratio: 0
  blank_line_ratio: 0.34210526315789475
size:
  words: 41
  effective_content_units: 1.9308333333333332
  sections: 7
  headings: 7
ecu_inputs:
  table_cells: 6
  diagram_nodes: 0
  diagram_edges: 0
  math_tokens: 0
  raw_html_or_mdx_lines: 0
sections:
  - section_id: 0
    heading_level: 1
    heading_text: ~
    start_line: 1
    end_line: 38
    parent_section_id: ~
    child_section_ids:
      - 1
      - 2
      - 3
      - 4
      - 5
      - 6
    word_count: 26
    block_count: 1
  - section_id: 1
    heading_level: 2
    heading_text: ~
    start_line: 7
    end_line: 10
    parent_section_id: 0
    child_section_ids: []
    word_count: 7
    block_count: 1
  - section_id: 2
    heading_level: 2
    heading_text: ~
    start_line: 11
    end_line: 15
    parent_section_id: 0
    child_section_ids: []
    word_count: 2
    block_count: 3
  - section_id: 3
    heading_level: 2
    heading_text: ~
    start_line: 16
    end_line: 21
    parent_section_id: 0
    child_section_ids: []
    word_count: 1
    block_count: 2
  - section_id: 4
    heading_level: 2
    heading_text: ~
    start_line: 22
    end_line: 28
    parent_section_id: 0
    child_section_ids: []
    word_count: 0
    block_count: 1
  - section_id: 5
    heading_level: 2
    heading_text: ~
    start_line: 29
    end_line: 32
    parent_section_id: 0
    child_section_ids: []
    word_count: 5
    block_count: 1
  - section_id: 6
    heading_level: 2
    heading_text: ~
    start_line: 33
    end_line: 38
    parent_section_id: 0
    child_section_ids: []
    word_count: 0
    block_count: 1
complexity:
  reading_path_complexity: 1
  reading_path_complexity_raw: 6
  cognitive_complexity: 3.763125
  halstead:
    operators_distinct: 10
    operators_total: 32
    operands_distinct: 57
    operands_total: 63
    vocabulary: 67
    length: 95
    volume: 576.2784730934884
    difficulty: 5.526315789473685
    effort: 3184.696824990331
    embedded_volume: 1.2392304845413264
    total_volume: 577.5177035780297
links:
  total: 2
  internal: 0
  relative: 1
  external: 1
  external_vendor: 1
  scholarly: 0
  issue_pr: 0
  absolute_same_repo: 0
  image: 1
  footnote: 0
  bare_url: 0
  broken: 1
  link_debt_score: 0.45
  information_scent_score: 0.3
  review_burden: 4.3
visuals:
  images: 1
  diagrams: 0
  diagram_nodes_total: 0
  diagram_edges_total: 0
  diagram_cycles_total: 0
  visual_scaffold_score: 0
  visual_net_effect: 1
tables:
  count: 1
  max_cells: 6
  table_burden_score: 0.025
  table_scaffold_score: 1
  hard_warnings: 0
maintainability:
  documentation_maintainability_index: 88.88933333333333
  section_balance_score: 0.85
  good_scaffold_score: 0.445
  artifact_debt_score: 0.04666666666666666
grounding:
  repository_grounding_score: 0.04000000000000001
  evidence_coverage_score: 0.15934065934065936
ai_era:
  filler_lazy_structure_risk: 0.512
  labels:
    - large-unanchored-prose
    - low-repository-grounding
    - specificity-scarcity
  top_contributors:
    - - large-unanchored-prose
      - 1
    - - specificity-scarcity
      - 1
    - - low-repository-grounding
      - 0.96
review:
  review_criticality_index: 3.942321428571429
artifacts:
  - id: 0
    kind: image
    start_line: 18
    end_line: 18
    language_tag: ~
    size: 1
    has_explanation: true
    has_label: true
    oversized: false
    burden: 1
  - id: 1
    kind: table
    start_line: 24
    end_line: 27
    language_tag: ~
    size: 6
    has_explanation: true
    has_label: true
    oversized: false
    burden: 0.025
  - id: 2
    kind: code
    start_line: 35
    end_line: 38
    language_tag: python
    size: 2
    has_explanation: true
    has_label: true
    oversized: false
    burden: 1
prose:
  language_detection:
    dominant_language: en
    blocks:
      - start_line: 1
        end_line: 1
        language: en
      - start_line: 3
        end_line: 5
        language: en
      - start_line: 7
        end_line: 7
        language: en
      - start_line: 9
        end_line: 9
        language: en
      - start_line: 11
        end_line: 11
        language: en
      - start_line: 13
        end_line: 13
        language: en
      - start_line: 14
        end_line: 14
        language: en
      - start_line: 16
        end_line: 16
        language: en
      - start_line: 20
        end_line: 20
        language: en
      - start_line: 22
        end_line: 22
        language: en
      - start_line: 29
        end_line: 29
        language: en
      - start_line: 31
        end_line: 31
        language: en
      - start_line: 33
        end_line: 33
        language: en
  english:
    readability:
      flesch_reading_ease: ~
      flesch_kincaid_grade: ~
      gunning_fog: ~
      smog: ~
      ari: ~
      coleman_liau: ~
      dale_chall_new: ~
      dale_chall_list: ngsl-1.2
      forcast: ~
      lix: ~
      rix: ~
      ensemble_grade_band:
        - ~
        - ~
    lexical:
      mattr_50: 0.72
      hapax_ratio: 0.69
      dis_ratio: 0.238
      lexical_density: 0.78
      avg_sentence_words: 3.933
      p90_sentence_words: 5
      max_sentence_words: 26
      stddev_sentence_words: 6.016
      avg_word_chars: 5
      p90_word_chars: 8
      sentence_count: 15
      words_total: 59
    wording:
      passive_ratio: 0
      hedge_density: 0
      weasel_density: 0.017
      wordy_density: 0
      adverb_density: 0
      nominalization_density: 0.017
      expletive_count: 0
      lexical_illusions: 0
      cliche_density: 0
      nonword_count: 0
      long_sentence_count: 0
      wording_quality_score: 0.979
    inclusive_language:
      flags: []
      inclusive_language_score: 1
      flag_count: 0
    short_doc_warning: true
  japanese: ~
  meta:
    short_doc_warning: true
    words_counted: 59
    sentences_counted: 15
    blocks_stripped:
      - code
      - math
      - table
