src/markdown/tests/snapshots/mehen__markdown__tests__assert_fixture_snapshot@heading_skip.md.snap
---
source: src/markdown/tests/mod.rs
---
path: "<fixture_path>"
loc:
  dloc: 11
  ploc: 6
  cloc: 0
  tloc: 0
  mloc: 0
  bloc: 5
  aloc: 0
loc_ratios:
  artifact_line_ratio: 0
  code_line_ratio: 0
  table_line_ratio: 0
  math_line_ratio: 0
  blank_line_ratio: 0.45454545454545453
size:
  words: 24
  effective_content_units: 0.1
  sections: 3
  headings: 3
ecu_inputs:
  table_cells: 0
  diagram_nodes: 0
  diagram_edges: 0
  math_tokens: 0
  raw_html_or_mdx_lines: 0
sections:
  - section_id: 0
    heading_level: 1
    heading_text: ~
    start_line: 1
    end_line: 11
    parent_section_id: ~
    child_section_ids:
      - 1
      - 2
    word_count: 5
    block_count: 1
  - section_id: 1
    heading_level: 3
    heading_text: ~
    start_line: 5
    end_line: 8
    parent_section_id: 0
    child_section_ids: []
    word_count: 11
    block_count: 1
  - section_id: 2
    heading_level: 2
    heading_text: ~
    start_line: 9
    end_line: 11
    parent_section_id: 0
    child_section_ids: []
    word_count: 8
    block_count: 1
complexity:
  reading_path_complexity: 1
  reading_path_complexity_raw: 2
  cognitive_complexity: 1
  halstead:
    operators_distinct: 4
    operators_total: 6
    operands_distinct: 24
    operands_total: 31
    vocabulary: 28
    length: 37
    volume: 177.87213211613133
    difficulty: 2.5833333333333335
    effort: 459.5030079666726
    embedded_volume: 0
    total_volume: 177.87213211613133
links:
  total: 0
  internal: 0
  relative: 0
  external: 0
  external_vendor: 0
  scholarly: 0
  issue_pr: 0
  absolute_same_repo: 0
  image: 0
  footnote: 0
  bare_url: 0
  broken: 0
  link_debt_score: 0
  information_scent_score: 0
  review_burden: 0
visuals:
  images: 0
  diagrams: 0
  diagram_nodes_total: 0
  diagram_edges_total: 0
  diagram_cycles_total: 0
  visual_scaffold_score: 0
  visual_net_effect: 0
tables:
  count: 0
  max_cells: 0
  table_burden_score: 0
  table_scaffold_score: 0
  hard_warnings: 0
maintainability:
  documentation_maintainability_index: 100
  section_balance_score: 0
  good_scaffold_score: 0
  artifact_debt_score: 0
artifacts: []
prose:
  language_detection:
    dominant_language: en
    blocks:
      - start_line: 1
        end_line: 1
        language: en
      - start_line: 3
        end_line: 3
        language: en
      - start_line: 5
        end_line: 5
        language: en
      - start_line: 7
        end_line: 7
        language: en
      - start_line: 9
        end_line: 9
        language: en
      - start_line: 11
        end_line: 11
        language: en
  english:
    readability:
      flesch_reading_ease: ~
      flesch_kincaid_grade: ~
      gunning_fog: ~
      smog: ~
      ari: ~
      coleman_liau: ~
      dale_chall_new: ~
      dale_chall_list: ngsl-1.2
      forcast: ~
      lix: ~
      rix: ~
      ensemble_grade_band:
        - ~
        - ~
    lexical:
      mattr_50: 0.71
      hapax_ratio: 0.727
      dis_ratio: 0.182
      lexical_density: 0.677
      avg_sentence_words: 5.167
      p90_sentence_words: 11
      max_sentence_words: 11
      stddev_sentence_words: 3.337
      avg_word_chars: 4.806
      p90_word_chars: 9
      sentence_count: 6
      words_total: 31
    wording:
      passive_ratio: 0
      hedge_density: 0
      weasel_density: 0
      wordy_density: 0
      adverb_density: 0.032
      nominalization_density: 0
      expletive_count: 0
      lexical_illusions: 0
      cliche_density: 0
      nonword_count: 0
      long_sentence_count: 0
      wording_quality_score: 0.969
    inclusive_language:
      flags: []
      inclusive_language_score: 1
      flag_count: 0
    short_doc_warning: true
  japanese: ~
  meta:
    short_doc_warning: true
    words_counted: 31
    sentences_counted: 6
    blocks_stripped: []
